# expense

./: .gitignore  Makefile  README.md  gspread_wrapper.py  main.py  pyproject.toml  todo.md  uvicorn_log.json
config/: config.json  favorites.json  ocr_regions.json
src/expense/: __main__.py  main.py
src/expense/api/: graph_generator.py  server.py  server_tools.py
src/expense/config/: config.json  credentials.json
src/expense/core/: asset_manager.py  base.py  expense.py  expr_analyzer.py  fitting.py  graph_generator.py  gspread_wrapper.py  ocr.py  termux_api.py
src/expense/static/: main.js  manifest.json  preload.js  service-worker.js  style.css
src/expense/static/js/: chart.js  main.js  simulator.js  table.js  ui.js
src/expense/templates/: asset_management.j2  index.html  index.j2  simulator.j2
tests/: test_main.py
